--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                             <a href="guides.html">Guides</a>
                         </li>
                         <li>
+                            <a href="samples/">Demos</a>
+                        </li>
+                        <li>
                             <a href="api/">API</a>
                         </li>
                     </ul>
