--- a/api.html
+++ b/api.html
@@ -1,17 +1,4 @@
 <!doctype html>
-<!--
-
-  Instructions:
-
-  - Save this file.
-  - Replace "USER" with your GitHub username.
-  - Replace "REPO" with your GitHub repo name.
-  - Replace "Your Project" with your project name.
-  - Upload this file (or commit to GitHub Pages).
-
-  Customize as you see fit!
-
--->
 <html>
 <head>
     <meta charset='utf-8'>
@@ -44,17 +31,24 @@
 </head>
 <body role='flatdoc' class='no-literate big-h3 large-brief'>
 
-<div class='header'>
+<div id="site-nav" class='header'>
     <div class='left'>
-        <h1>GremlinJS</h1>
+        <h1><a href="index.html">GremlinJS</a></h1>
         <ul>
-            <li><a href='https://github.com/grmlin/gremlinjs'>View on GitHub</a></li>
-            <li><a href='https://github.com/grmlin/gremlinjs/issues'>Issues</a></li>
+            <li><a href='guides.html'>Guides</a></li>
+            <li class="current"><a>API Reference</a></li>
         </ul>
     </div>
     <div class='right'>
+        <ul>
+            <li><a href='https://github.com/grmlin/gremlinjs'>View on GitHub</a></li>
+        </ul>
         <!-- GitHub buttons: see http://ghbtns.com -->
-        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&amp;repo=gremlinjs&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+        <!--<iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=watch&count=true&size=large"
+                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=fork&count=false&size=large"
+                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&amp;repo=gremlinjs&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>-->
     </div>
 </div>
 
