--- a/guides.html
+++ b/guides.html
@@ -38,7 +38,7 @@
                     <li>
                         <a href="samples/">Demos</a>
                     </li>
-                    <li>
+                    <li class="current">
                         <a href="api/GremlinJS.html">API</a>
                     </li>
                 </ul>
