--- a/index.html
+++ b/index.html
@@ -5,45 +5,39 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
-
+    <link  href='css/flatdoc-white.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="css/site.css">
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/gremlin.min.js"></script>
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
 </head>
-<body>
+<body role='flatdoc' class='no-literate big-h3 large-brief'>
+
+<div id="site-nav" class='header'>
+    <div class='left'>
+        <h1 class="current"><a href="index.html">GremlinJS</a></h1>
+        <ul>
+            <li><a href='guides.html'>Guides</a></li>
+            <li><a href="api.html">API Reference</a></li>
+        </ul>
+    </div>
+    <div class='right'>
+        <ul>
+            <li><a href='https://github.com/grmlin/gremlinjs'>View on GitHub</a></li>
+        </ul>
+        <!-- GitHub buttons: see http://ghbtns.com -->
+        <!--<iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=watch&count=true&size=large"
+                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=fork&count=false&size=large"
+                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&amp;repo=gremlinjs&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>-->
+    </div>
+</div>
 
 <div class="page-wrapper">
-    <div class="navbar navbar-static-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="brand with-icon" href="./index.html"><img src="img/ico.png" alt="GremlinJS"/> GremlinJS</a>
-
-                <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li class="active">
-                            <a>Get started</a>
-                        </li>
-                        <li class="">
-                            <a href="guides.html">Guides</a>
-                        </li>
-                        <li>
-                            <a href="samples/">Demos</a>
-                        </li>
-                        <li>
-                            <a href="api/GremlinJS.html">API</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <div class="hero-unit">
         <div class="container">
             <div class="row">
