--- a/api.html
+++ b/api.html
@@ -55,7 +55,9 @@
 <div class='content-root'>
     <div class='menubar'>
         <div class='menu section' role='flatdoc-menu'></div>
+        
     </div>
+    <a class="top-link" href="#">&#171;</a>
     <div role='flatdoc-content' class='content'></div>
 </div>
 
