top link styling

--- a/api.html
+++ b/api.html
@@ -57,7 +57,7 @@
         <div class='menu section' role='flatdoc-menu'></div>
         
     </div>
-    <a class="top-link" href="#">&#171;</a>
+    <a class="top-link" href="#"></a>
     <div role='flatdoc-content' class='content'></div>
 </div>
 
