--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="logo">
                         <img src="img/logo.png" alt="GremlinJS Logo"/>
 
-                        <h1>GremlinJS
+                        <h1>Gremlin<span>JS</span>
                             <small>web components the easy way</small>
                         </h1>
                     </div>
