--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>GremlinJS - web components the easy way</title>
+    <link  href='css/flatdoc-white.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
-    <link  href='css/flatdoc-white.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="css/site.css">
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -67,8 +67,9 @@
                     <ul class="">
                         <li><strong>no dependencies</strong></li>
                         <li><strong>fast and lightweight</strong></li>
+                        <li><strong>easy to use, GremlinJS works completely autonomous</strong></li>
                         <li><strong>lazy loading of javascript components</strong></li>
-                        <li><strong>highly extendable with build in extensions interface</strong></li>
+                        <li><strong>highly extendable through build in extensions interface</strong></li>
                     </ul>
                 </div>
                 <div class="span12 buffered">
@@ -91,8 +92,9 @@
             </div>
         </div>
         <div class="row buffered">
-            <div class="span12">
+            <div class="span6">
                 <h3>1. Include GremlinJS</h3>
+                <p>&nbsp;</p>
 
 <div class="well"><pre class="prettyprint">
 &lt;!DOCTYPE html&gt;
@@ -105,21 +107,20 @@
 &lt;/html&gt;
 </pre></div>
             </div>
-        </div>
-        <div class="row">
-            <div class="span12">
+            <div class="span6">
                 <h3>2. Add a gremlin</h3>
+                <p>&nbsp;</p>
 
 
 <div class="well"><pre class="prettyprint">
 &lt;body&gt;
-    <strong>&lt;div class=&quot;gizmo-slideshow&quot; data-gremlin=&quot;Gizmo&quot;&gt;
-        &lt;p&gt;
-            &lt;strong&gt;Hello World, Gizmo here! Loading some images from google now...&lt;/strong&gt;
-        &lt;/p&gt;
-    &lt;/div&gt;</strong>
-    <span class="muted">&lt;script src=&quot;js/gremlinjs.min.js&quot;&gt;&lt;/script&gt;   </span>
-    <strong>&lt;script src=&quot;js/Gizmo.js&quot;&gt;&lt;/script&gt;</strong>
+  <strong>&lt;div data-gremlin=&quot;Gizmo&quot;&gt;
+    &lt;p&gt;
+      &lt;strong&gt;Loading images...&lt;/strong&gt;
+    &lt;/p&gt;
+  &lt;/div&gt;</strong>
+  <span class="muted">&lt;script src=&quot;js/gremlinjs.min.js&quot;&gt;&lt;/script&gt;   </span>
+  <strong>&lt;script src=&quot;js/Gizmo.js&quot;&gt;&lt;/script&gt;</strong>
 &lt;/body&gt;
 </pre></div>
 
@@ -130,7 +131,8 @@
 
         <div class="row">
             <div class="span12">
-                <h3>Live Preview</h3>
+                <h3>3. Done</h3>
+                <p>&nbsp;</p>
 
                 <div class="live-preview">
                     <pre class="codepen" data-height="500" data-type="result" data-href="vsxDk" data-user="grmlin"
