added coffeescript examples

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <ul class="">
                         <li><strong>no dependencies</strong></li>
                         <li><strong>fast and lightweight</strong></li>
+                        <li><strong>AMD support, load the components asynchronously</strong></li>
                         <li><strong>easy to use, GremlinJS works completely autonomous</strong></li>
                         <li><strong>lazy loading of javascript components</strong></li>
                         <li><strong>highly extendable through build in extensions interface</strong></li>
