Samples page added

--- a/api.html
+++ b/api.html
@@ -37,6 +37,7 @@
         <ul>
             <li><a href='guides.html'>Guides</a></li>
             <li class="current"><a>API Reference</a></li>
+            <li><a href="examples.html">Examples</a></li>
         </ul>
     </div>
     <div class='right'>
