--- a/examples.html
+++ b/examples.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>GremlinJS - API Reference</title>
+    <title>GremlinJS - Examples</title>
 
     <!-- Flatdoc -->
     <script src="js/jquery.min.js"></script>
@@ -13,7 +13,7 @@
     <script src='js/flatdoc/flatdoc.js'></script>
 
     <!-- Flatdoc theme -->
-    <link  href='css/flatdoc-white.css' rel='stylesheet'>
+    <link href='css/flatdoc-white.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="css/site.css">
     <script src='js/flatdoc/script.js'></script>
     <script src='js/site.js'></script>
@@ -25,7 +25,7 @@
     <!-- Initializer -->
     <script>
         Flatdoc.run({
-            fetcher: Flatdoc.file('src/guides.md')
+            fetcher: Flatdoc.file('src/examples.md')
         });
     </script>
 </head>
@@ -35,9 +35,9 @@
     <div class='left'>
         <h1><a href="index.html">GremlinJS</a></h1>
         <ul>
-            <li class="current"><a>Guides</a></li>
+            <li><a href="guides.html">Guides</a></li>
             <li><a href="api.html">API Reference</a></li>
-            <li><a href="examples.html">Examples</a></li>
+            <li class="current"><a>Examples</a></li>
         </ul>
     </div>
     <div class='right'>
@@ -56,11 +56,13 @@
 <div class='content-root'>
     <div class='menubar'>
         <div class='menu section' role='flatdoc-menu'></div>
-        
     </div>
     <a class="top-link" href="#"></a>
+
     <div role='flatdoc-content' class='content'></div>
 </div>
 
+<script src="js/gremlin.min.js"></script>
+<script src="js/gremlins/Codepen.js"></script>
 </body>
 </html>
