--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <ul>
             <li><a href='guides.html'>Guides</a></li>
             <li><a href="api.html">API Reference</a></li>
+            <li><a href="examples.html">Examples</a></li>
         </ul>
     </div>
     <div class='right'>
