--- a/examples.html
+++ b/examples.html
@@ -7,6 +7,15 @@
 
     <title>GremlinJS - Examples</title>
 
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
+
+
     <!-- Flatdoc -->
     <script src="js/jquery.min.js"></script>
     <script src='js/flatdoc/legacy.js'></script>
@@ -29,7 +38,7 @@
         });
     </script>
 </head>
-<body role='flatdoc' class='no-literate big-h3 large-brief'>
+<body role='flatdoc' class='no-literate big-h3 large-brief with-logo'>
 
 <div id="site-nav" class='header'>
     <div class='left'>
