--- a/examples.html
+++ b/examples.html
@@ -38,7 +38,7 @@
         });
     </script>
 </head>
-<body role='flatdoc' class='no-literate big-h3 large-brief with-logo'>
+<body role='flatdoc' class='no-literate big-h3 large-brief'>
 
 <div id="site-nav" class='header'>
     <div class='left'>
