--- a/guides.html
+++ b/guides.html
@@ -7,6 +7,14 @@
 
     <title>GremlinJS - API Reference</title>
 
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
+
     <!-- Flatdoc -->
     <script src="js/jquery.min.js"></script>
     <script src='js/flatdoc/legacy.js'></script>
