--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/gremlin.min.js"></script>
     <!-- Flatdoc -->
     <script src="js/jquery.min.js"></script>
     <script src='js/flatdoc/legacy.js'></script>
     <script src='js/flatdoc/flatdoc.js'></script>
     <!-- Initializer -->
+    <script src='js/site.js'></script>
+
     <script>
         Flatdoc.run({
             fetcher: Flatdoc.file('src/index.md')
@@ -127,5 +128,9 @@
         </div>
     </div>
 </footer>
+
+<script src="js/gremlin.min.js"></script>
+<script src="js/gremlins/Codepen.js"></script>
+
 </body>
 </html>
