--- a/guides.html
+++ b/guides.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>GremlinJS - API Reference</title>
+    <title>GremlinJS - Guides</title>
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
