--- a/api.html
+++ b/api.html
@@ -69,6 +69,19 @@
     <a class="top-link" href="#"></a>
     <div role='flatdoc-content' class='content'></div>
 </div>
-
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="span4">
+                <span>Andreas Wehr 2013</span>
+            </div>
+            <div class="span3 offset5 text-right">
+                <a href="#">github</a>
+                <a href="#">twitter</a>
+                <a href="#">google+</a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
