--- a/examples.html
+++ b/examples.html
@@ -70,7 +70,20 @@
 
     <div role='flatdoc-content' class='content'></div>
 </div>
-
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="span4">
+                <span>Andreas Wehr 2013</span>
+            </div>
+            <div class="span3 offset5 text-right">
+                <a href="#">github</a>
+                <a href="#">twitter</a>
+                <a href="#">google+</a>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="js/gremlin.min.js"></script>
 <script src="js/gremlins/Codepen.js"></script>
 </body>
