--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- Flatdoc -->
-    <script src="js/jquery.min.js"></script>
     <script src='js/flatdoc/legacy.js'></script>
     <script src='js/flatdoc/flatdoc.js'></script>
     <!-- Initializer -->
@@ -96,8 +95,8 @@
                     <div class="text-center">
 
                         <div class="download-button-wrapper">
-                            <a class="btn btn-primary btn-large download-button" href="#">Download GremlinJS</a>
-                            <span class="download-info muted">~4k minified and gzipped</span>
+                            <a class="btn btn-primary btn-large download-button" href="build/0.4.0/gremlin.min.js">Download GremlinJS</a>
+                            <span class="download-info muted"><strong>v0.4.0</strong> ~4k minified and gzipped</span>
                         </div>
 
                     </div>
@@ -129,7 +128,7 @@
     </div>
 </footer>
 
-<script src="js/gremlin.min.js"></script>
+<script src="build/0.4.0/gremlin.min.js"></script>
 <script src="js/gremlins/Codepen.js"></script>
 
 </body>
