--- a/examples.html
+++ b/examples.html
@@ -15,9 +15,10 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
 
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
     <!-- Flatdoc -->
-    <script src="js/jquery.min.js"></script>
+
     <script src='js/flatdoc/legacy.js'></script>
     <script src='js/flatdoc/flatdoc.js'></script>
 
@@ -84,7 +85,7 @@
         </div>
     </div>
 </footer>
-<script src="js/gremlin.min.js"></script>
+<script src="build/0.4.0/gremlin.min.js"></script>
 <script src="js/gremlins/Codepen.js"></script>
 </body>
 </html>
