--- a/guides.html
+++ b/guides.html
@@ -15,8 +15,9 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
 
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
     <!-- Flatdoc -->
-    <script src="js/jquery.min.js"></script>
     <script src='js/flatdoc/legacy.js'></script>
     <script src='js/flatdoc/flatdoc.js'></script>
 
