added latest script

--- a/examples.html
+++ b/examples.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 </footer>
-<script src="build/0.4.0/gremlin.min.js"></script>
+<script src="build/latest/gremlin.min.js"></script>
 <script src="js/gremlins/Codepen.js"></script>
 </body>
 </html>
