--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="text-center">
 
                         <div class="download-button-wrapper">
-                            <a class="btn btn-primary btn-large download-button" href="build/0.4.0/gremlin.min.js">Download GremlinJS</a>
+                            <a class="btn btn-primary btn-large download-button" href="build/latest/gremlin.min.js">Download GremlinJS</a>
                             <span class="download-info muted"><strong>v0.4.0</strong> ~4k minified and gzipped</span>
                         </div>
 
@@ -128,7 +128,7 @@
     </div>
 </footer>
 
-<script src="build/0.4.0/gremlin.min.js"></script>
+<script src="build/latest/gremlin.min.js"></script>
 <script src="js/gremlins/Codepen.js"></script>
 
 </body>
