--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                         <img src="img/logo.png" alt="GremlinJS Logo"/>
 
                         <h1>Gremlin<span>JS</span>
-                            <small>web components the easy way</small>
+                            <small>cuddly javascript components for the web</small>
                         </h1>
                     </div>
 
                 </div>
                 <div class="span5">
                     <p class="lead">
-                        GremlinJS is a dependency-free library to build <strong><abbr title="Gremlins">reusable
-                        web components</abbr></strong> with Javascript. <br>
+                        GremlinJS is a dependency-free library to build <abbr title="Gremlins">reusable
+                        Javascript components</abbr>.<br>
                     </p>
 
                     <p class="lead">
@@ -82,13 +82,13 @@
 
                 </div>
                 <div class="span6 offset1">
-                    <ul class="">
-                        <li><strong>no dependencies</strong></li>
+                    <ul class="unstyled">
+                        <li><strong><em>tasty vanilla</em>, no dependencies</strong></li>
                         <li><strong>fast and lightweight</strong></li>
-                        <li><strong>easy to use, GremlinJS works completely autonomous</strong></li>
+                        <li><strong>easy to use, well documented and works completely autonomous</strong></li>
                         <li><strong>lazy loading of javascript components</strong></li>
-                        <li><strong>optional AMD support, load the components asynchronously</strong></li>
-                        <li><strong>highly expendable through build in extensions interface</strong></li>
+                        <li><strong>build in extensions interface</strong></li>
+                        <li><strong>optional AMD support, load the javascripts asynchronously</strong></li>
                     </ul>
                 </div>
                 <div class="span12 buffered">
@@ -98,9 +98,9 @@
                             <a class="btn btn-primary btn-large download-button" href="build/latest/gremlin.min.js">Download GremlinJS</a>
                             <span class="download-info muted"><strong>v0.4.0</strong> ~4k minified and gzipped</span>
                         </div>
-
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
