--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <img src="img/logo.png" alt="GremlinJS Logo"/>
 
                         <h1>Gremlin<span>JS</span>
-                            <small>cuddly javascript components for the web</small>
+                            <small><em>cuddly</em> javascript components for the web</small>
                         </h1>
                     </div>
 
